update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Hard] 1354. Construct Target Array With Multiple Sums.md
+++ b/algorithm/LeetCode/[Hard] 1354. Construct Target Array With Multiple Sums.md
@@ -40,6 +40,14 @@ Output: true
 * `1 <= target.length <= 5 * 10^4`
 * `1 <= target[i] <= 10^9`
 
+__Hint 1:__
+
+Given that the sum is strictly increasing, the largest element in the target must be formed in the last step by adding the total sum in the previous step. Thus, we can simulate the process in a reversed way.
+
+__Hint 2:__
+
+Subtract the largest with the rest of the array, and put the new element into the array. Repeat until all elements become one
+
 # Submissions
 ---
 **Solution 1: (Heap)**
@@ -47,8 +55,8 @@ Output: true
 Simulate the process backword
 
 ```
-Runtime: 268 ms
-Memory Usage: 18.5 MB
+Runtime: 256 ms
+Memory Usage: 20.2 MB
 ```
 ```python
 class Solution:
@@ -56,14 +64,14 @@ class Solution:
         total = sum(target)
         target = [-x for x in target]
         heapq.heapify(target)
-        while target:
-            curMax = -heapq.heappop(target)
-            if curMax == 1:
-                return len(target) == 0 or max(target) == -1
-            total -= curMax
-            nxt = curMax - total
-            total += nxt
-            if nxt < 1:
+ 
+        while -target[0] > 1:
+            num = -heapq.heappop(target)
+            rest_sum = total - num
+            if num < rest_sum or not rest_sum or (not num % rest_sum and rest_sum != 1):
                 return False
-            heapq.heappush(target, -nxt)
+            num %= rest_sum
+            total = num + rest_sum 
+            heapq.heappush(target, -num)
+        return True  
 ```
