--- a/algorithm/LeetCode/[Hard] 1383. Maximum Performance of a Team.md
+++ b/algorithm/LeetCode/[Hard] 1383. Maximum Performance of a Team.md
@@ -41,71 +41,31 @@ Output: 72
 ---
 **Solution 1: (Heap)**
 
-**Intuition**
-
-Doesn't efficiency and speed are the same thing?  
-Like efficiency = speed = produce / time?  
-Speed sounds more like time actually.  
-You work slow, so you need more time.  
-
-@Msylcatam reminded me this problem 857. Minimum Cost to Hire K Workers  
-for your extra exercise as revision.
-
-Hungry and out for meal.  
-For C++, may you refer to 857, exact the same template.
-
-Special period, take care of yourself.  
-Wash your hand, touch the keyboard instead of your face.  
-Consider of putting a mask if necessary.  
-Very important, mute tv and twitter of terrible speech.
-
-
-**Solution 1: Binary Insert**
-
-We hire the team from the most efficent people to less.  
-The current iterated engineer has the smallest efficency in the team.  
-The performance of a team = efficency[i] * sumSpeed
-
-Each time we have a new engineer,  
-though will reduce the efficency of the team,  
-it may increment the sum of speed.
-
-If the size of team is bigger than k,  
-we have to layoff the smallest speed.  
-Then we update the result.
-
-Note we should try better team work.  
-But there is the chance that less engineers  
-and achieve greater performance than k engineers.  
-If you have efficient = speed = 100,  
-other engineer have nothing,  
-you should be independent engineer and be your own boss.   
-(I didn't test if LeetCode include this case.)
-
-We keep our engineers in order of their speed,  
-and we insert the new engineer inside the list as per its speed.
-
-
-**Complexity**
-
-Time `O(N^2)`, since insert take `O(N)`  
-Space `O(N)`
-
-
 ```
-Runtime: 428 ms
-Memory Usage: 28.9 MB
+Runtime: 348 ms
+Memory Usage: 30.5 MB
 ```
 ```python
 class Solution:
     def maxPerformance(self, n: int, speed: List[int], efficiency: List[int], k: int) -> int:
-        hq = []
-        res = sSum = 0
-        for e, s in sorted(zip(efficiency, speed), reverse=1):
-            heapq.heappush(hq, s)
-            sSum += s
-            if len(hq) > k:
-                sSum -= heapq.heappop(hq)
-            res = max(res, sSum * e)
-        return res % (10**9 + 7)
+        modulo = 10 ** 9 + 7
+
+        # build tuples of (efficiency, speed)
+        candidates = zip(efficiency, speed)
+        # sort the candidates by their efficiencies
+        candidates = sorted(candidates, key=lambda t:t[0], reverse=True)
+
+        speed_heap = []
+        speed_sum, perf = 0, 0
+        for curr_efficiency, curr_speed in candidates:
+            # maintain a heap for the fastest (k-1) speeds
+            if len(speed_heap) > k-1:
+                speed_sum -= heapq.heappop(speed_heap)
+            heapq.heappush(speed_heap, curr_speed)
+
+            # calculate the maximum performance with the current member as the least efficient one in the team
+            speed_sum += curr_speed
+            perf = max(perf, speed_sum * curr_efficiency)
+
+        return perf % modulo
 ```
