update LeetCode Weekly Contest 253

--- a/algorithm/LeetCode/[Hard] 1632. Rank Transform of a Matrix.md
+++ b/algorithm/LeetCode/[Hard] 1632. Rank Transform of a Matrix.md
@@ -59,6 +59,18 @@ Output: [[5,1,4],[1,2,3],[6,3,1]]
 * `1 <= m, n <= 500`
 * `-109 <= matrix[row][col] <= 109`
 
+**Hint 1:**
+
+Sort the cells by value and process them in increasing order.
+
+**Hint2:**
+
+The rank of a cell is the maximum rank in its row and column plus one.
+
+**Hint 3:**
+
+Handle the equal cells by treating them as components using a union-find data structure.
+
 # Submissions
 ---
 **Solution 1: (Union-Find)**
