update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Easy] 1629. Slowest Key.md
+++ b/algorithm/LeetCode/[Easy] 1629. Slowest Key.md
@@ -65,3 +65,98 @@ class Solution:
                 
         return ans
 ```
+
+**Solution 2: (Using Map)**
+```
+Runtime: 8 ms
+Memory Usage: 10.8 MB
+```
+```c++
+class Solution {
+public:
+    char slowestKey(vector<int>& releaseTimes, string keysPressed) {
+        unordered_map<char, int> durationMap;
+        durationMap[keysPressed[0]] = releaseTimes[0];
+        // find and store the keypress duration for each key in the durationMap
+        for (int i = 1; i < releaseTimes.size(); i++) {
+            int currentDuration = releaseTimes[i] - releaseTimes[i - 1];
+            char currentKey = keysPressed[i];
+            durationMap[currentKey] =
+                max(durationMap[currentKey], currentDuration);
+        }
+        char slowestKey = ' ';
+        int longestPressDuration = 0;
+        // iterate over the map to find the slowest key
+        for (auto mapElement : durationMap) {
+            char key = static_cast<char>(mapElement.first);
+            int duration = static_cast<int>(mapElement.second);
+            if (duration > longestPressDuration) {
+                longestPressDuration = duration;
+                slowestKey = key;
+            } else if (duration == longestPressDuration && key > slowestKey) {
+                slowestKey = key;
+            }
+        }
+        return slowestKey;
+    }
+};
+```
+
+**Solution 3: (Fixed Size Array)**
+```
+Runtime: 8 ms
+Memory Usage: 10.7 MB
+```
+```c++
+class Solution {
+public:
+    char slowestKey(vector<int>& releaseTimes, string keysPressed) {
+        int durationArray[26] = {0};
+        durationArray[keysPressed[0] - 'a'] = releaseTimes[0];
+        // find and store the key pressed duration for each key
+        for (int i = 1; i < releaseTimes.size(); i++) {
+            int currentDuration = releaseTimes[i] - releaseTimes[i - 1];
+            char currentKey = keysPressed[i];
+            durationArray[currentKey - 'a'] =
+                max(durationArray[currentKey - 'a'], currentDuration);
+        }
+        // initialize slowest key as 'z'
+        int slowestKeyIndex = 25;
+        // iterate from 'y' to 'a' to find slowest key
+        for (int currentKey = 24; currentKey >= 0; currentKey--) {
+            if (durationArray[currentKey] > durationArray[slowestKeyIndex]) {
+                slowestKeyIndex = currentKey;
+            }
+        }
+        return slowestKeyIndex + 'a';
+    }
+};
+```
+
+**Solution 4: (Constant Extra Space)**
+```
+Runtime: 8 ms
+Memory Usage: 10.6 MB
+```
+```c++
+class Solution {
+public:
+    char slowestKey(vector<int>& releaseTimes, string keysPressed) {
+        int n = releaseTimes.size();
+        int longestPress = releaseTimes[0];
+        char slowestKey = keysPressed[0];
+        for (int i = 1; i < n; i++) {
+            int currentDuration = releaseTimes[i] - releaseTimes[i - 1];
+            // check if we found the key that is slower than slowestKey
+            if (currentDuration > longestPress ||
+                (currentDuration == longestPress &&
+                 keysPressed[i] > slowestKey)) {
+                // update the slowest key and longest press duration
+                longestPress = currentDuration;
+                slowestKey = keysPressed[i];
+            }
+        }
+        return slowestKey;
+    }
+};
+```
