update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Easy] 1189. Maximum Number of Balloons.md
+++ b/algorithm/LeetCode/[Easy] 1189. Maximum Number of Balloons.md
@@ -37,7 +37,7 @@ Output: 0
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Counter)**
 ```
 Runtime: 28 ms
 Memory Usage: 12.7 MB
@@ -55,4 +55,82 @@ class Solution:
             ans = min(ans, counter[c] // 2)
         
         return ans
+```
+
+**Solution 2: (Counting Characters)**
+```
+Runtime: 4 ms
+Memory Usage: 6.6 MB
+```
+```c++
+class Solution {
+public:
+    int maxNumberOfBalloons(string text) {
+        int bCount = 0, aCount = 0, lCount = 0, oCount = 0, nCount = 0;
+        
+        // Count the frequencey of all the five characters
+        for (int i = 0; i < text.length(); i++) {
+            if (text[i] == 'b') {
+                bCount++;
+            } else if (text[i] == 'a') {
+                aCount++;
+            } else if (text[i] == 'l') {
+                lCount++;
+            } else if (text[i] == 'o') {
+                oCount++;
+            } else if (text[i] == 'n') {
+                nCount++;
+            }
+        }
+        
+        // Find the potential of each character.
+        // Except for 'l' and 'o' the potential is equal to the frequency.
+        lCount = lCount / 2;
+        oCount = oCount / 2;
+        
+        // Find the bottleneck.
+        return min({bCount, aCount, lCount, oCount, nCount});
+    }
+};
+```
+
+**Solution 3: (Generalized Solution using an Array)**
+```
+Runtime: 0 ms
+Memory Usage: 6.7 MB
+```
+```c++
+class Solution {
+public:
+    int findMaxNumberofPattern(string text, string pattern) {
+        int n = text.length(), m = pattern.length(), answer = INT_MAX;
+        int freqInText[26] = {0}, freqInPattern[26] = {0};
+        
+        // Frequency of characters in text.
+        for (int i = 0; i < n; i++) {
+            freqInText[text[i] - 'a']++;
+        }
+        // Frequency of characters in pattern.
+        for (int i = 0; i < m; i++) {
+            freqInPattern[pattern[i] - 'a']++;
+        }
+        
+        // Compare the maximum string that can be produced
+        // considering one character at a time.
+        for (int i = 0; i < 26; i++) {
+            // Do not divide by zero.
+            if (freqInPattern[i]) {
+                answer = min(answer, freqInText[i] / freqInPattern[i]);
+            }
+        }
+        
+        return answer;
+    }
+    
+    int maxNumberOfBalloons(string text) {
+        // Any string made up of lowercase English letters.
+        string pattern = "balloon";
+        return findMaxNumberofPattern(text, pattern);
+    }
+};
 ```
