--- a/algorithm/LeetCode/[Easy] 1260. Shift 2D Grid.md
+++ b/algorithm/LeetCode/[Easy] 1260. Shift 2D Grid.md
@@ -69,3 +69,47 @@ class Solution:
 
         return grid
 ```
+
+**Solution 2: (Array)**
+```
+Runtime: 72 ms
+Memory Usage: 14.8 MB
+```
+```c
+
+
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int** shiftGrid(int** grid, int gridSize, int* gridColSize, int k, int* returnSize, int** returnColumnSizes){
+    int *flat = (int *)malloc(sizeof(int) * gridSize * (*gridColSize));
+    int cur = 0;
+    for (int i = 0; i < gridSize; i++) {
+        for (int j = 0; j < *gridColSize; j++) {
+            flat[cur] = grid[i][j];
+            cur += 1;
+        }
+    }
+    cur = (gridSize * (*gridColSize) - 1 - k%(gridSize * (*gridColSize)) + 1) % (gridSize * (*gridColSize));
+    int **ans = (int **)malloc(sizeof(int *) * gridSize);
+    for (int i = 0; i < gridSize; i ++) {
+        ans[i] = (int *)malloc(sizeof(int) * (*gridColSize));
+    }
+    for (int i = 0; i < gridSize; i ++) {
+        for (int j = 0; j < *gridColSize; j++) {
+            ans[i][j] = flat[cur];
+            cur += 1;
+            cur %= gridSize*(*gridColSize);
+        }
+    }
+    *returnSize = gridSize;
+    int *ret_colSize = (int *)malloc(sizeof(int) * gridSize);
+    for (int i = 0; i < gridSize; i ++) {
+        ret_colSize[i] = *gridColSize;
+    }
+    *returnColumnSizes = ret_colSize;
+    return ans;
+}
+```
