update LeetCode solution (Linked List) - C

--- a/algorithm/LeetCode/[Easy] 1217. Play with Chips.md
+++ b/algorithm/LeetCode/[Easy] 1217. Play with Chips.md
@@ -47,3 +47,21 @@ class Solution:
                 odd += 1
         return min(odd, even)
 ```
+
+**Solution 2: (Math)**
+```
+Runtime: 0 ms
+Memory Usage: 5.6 MB
+```
+```c
+int minCostToMoveChips(int* position, int positionSize){
+    int odd = 0, even = 0;
+    for (int i = 0; i < positionSize; i ++) {
+        if (position[i]%2)
+            odd += 1;
+        else
+            even += 1;
+    }
+    return odd <= even ? odd : even;
+}
+```
