update LeetCode solution (Stack, Hash Table) - C

--- a/algorithm/LeetCode/[Easy] 1002. Find Common Characters.md
+++ b/algorithm/LeetCode/[Easy] 1002. Find Common Characters.md
@@ -46,3 +46,47 @@ class Solution:
                 ans += [key]*min(d[key])
         return ans
 ```
+
+**Solution 2: (Counter)**
+```
+Runtime: 4 ms
+Memory Usage: 7.2 MB
+```
+```c
+
+
+/**
+ * Note: The returned array must be malloced, assume caller calls free().
+ */
+char ** commonChars(char ** words, int wordsSize, int* returnSize){
+    u_int **table = (u_int **)malloc(wordsSize * sizeof(u_int*));
+    char ** result = NULL;
+    int i,j;
+    (*returnSize) = 0;
+    for(i=0;i<wordsSize;i++) table[i] = (u_int*)calloc(26,sizeof(u_int));
+    for(i=0;i<wordsSize;i++) {
+        for(j=0;words[i][j];j++) {
+            table[i][words[i][j]-'a']++;
+        }
+    }
+    for(i=0;i<26;i++) {
+        int min =INT_MAX;
+        for(j=0;j<wordsSize;j++) {
+            
+            if(table[j][i] <min) min = table[j][i];
+        }
+        while(min) {
+            result = (char**)realloc(result,++(*returnSize)*sizeof(char*));
+            result[(*returnSize)-1] = (char*)calloc(2,sizeof(char));
+            result[(*returnSize)-1][0] = i+'a';
+            min--;
+        }
+    }
+    // free hash_table;
+    for(i=0;i<wordsSize;i++) {
+        free(table[i]);
+    }
+    free(table);
+    return result;
+}
+`` `
