--- a/algorithm/LeetCode/[Easy] 1290. Convert Binary Number in a Linked List to Integer.md
+++ b/algorithm/LeetCode/[Easy] 1290. Convert Binary Number in a Linked List to Integer.md
@@ -68,3 +68,28 @@ class Solution:
             head = head.next
         return ans
 ```
+
+**Solution 1: (Bit Manipulation, Linked List)**
+```
+Runtime: 0 ms
+Memory Usage: 5.6 MB
+```
+```c
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     struct ListNode *next;
+ * };
+ */
+
+
+int getDecimalValue(struct ListNode* head){
+    int ans = 0;
+    while (head) {
+        ans = (ans << 1) + head->val;
+        head = head->next;
+    }
+    return ans;
+}
+```
