--- a/algorithm/LeetCode/[Easy] 1021. Remove Outermost Parentheses.md
+++ b/algorithm/LeetCode/[Easy] 1021. Remove Outermost Parentheses.md
@@ -73,3 +73,32 @@ class Solution(object):
         ans = ''.join(ans)
         return ans
 ```
+
+**Solution 2: (Greedy)**
+```
+Runtime: 10 ms
+Memory Usage: 5.9 MB
+```
+```c
+char * removeOuterParentheses(char * s){
+    int cnt = 0;
+    int j = 0;
+    for (int i = 0; i < strlen(s); i ++) {
+        if (s[i] == '(') {
+            cnt += 1;
+            if (cnt > 1) {
+                s[j] = '(';
+                j += 1;
+            }
+        } else {
+            cnt -= 1;
+            if (cnt >= 1) {
+                s[j] = ')';
+                j += 1;
+            }
+        }
+    }
+    s[j] = 0;
+    return s;
+}
+```
