update LeetCode solution (Tree, Heap, BFS, Best-FS, DFS, Binary Search) - C

--- a/algorithm/LeetCode/[Easy] 1446. Consecutive Characters.md
+++ b/algorithm/LeetCode/[Easy] 1446. Consecutive Characters.md
@@ -96,3 +96,22 @@ class Solution:
             ans = max(ans,cnt)        
         return ans
 ```
+
+**Solution 4: (Greedy)**
+```
+Runtime: 0 ms
+Memory Usage: 5.8 MB
+```
+```c
+int maxPower(char * s){
+    int i = 0, j = 0, ans = 0;
+    while (s[j]) {
+        if (s[j] != s[i]) {
+            i = j;
+        }
+        ans = (ans > j-i+1 ? ans : j-i+1);
+        j += 1;
+    }
+    return ans;
+}
+```
