--- a/algorithm/LeetCode/[Hard] 1095. Find in Mountain Array.md
+++ b/algorithm/LeetCode/[Hard] 1095. Find in Mountain Array.md
@@ -159,7 +159,76 @@ class Solution:
         left_search = binary_search(0, left, operator.lt)
         if left_search != -1:
             return left_search
-        return binary_search(left, lenn, operator.gt)
-    
-    
+        return binary_search(left, lenn, operator.gt) 
+```
+
+**Solution 3: (Binary Search)**
+```
+Runtime: 5 ms
+Memory Usage: 6.1 MB
+```
+```c
+/**
+ * *********************************************************************
+ * // This is the MountainArray's API interface.
+ * // You should not implement it, or speculate about its implementation
+ * *********************************************************************
+ *
+ * int get(MountainArray *, int index);
+ * int length(MountainArray *);
+ */
+
+int findInMountainArray(int target, MountainArray* mountainArr) {
+        int l = 0;
+        int h = length(mountainArr)-1;
+        int totallen =  length(mountainArr)-1;
+        int m;
+        
+        // locate peak
+        while(l <= h){
+            m = l + (h - l)/2;
+            int num = get(mountainArr, m);
+            int num1 = (m == 0)? -1 : get(mountainArr, m-1);
+            int num2 = (m == totallen) ? -1 : get(mountainArr, m+1);
+            if(num1 < num && num < num2){
+                l = m + 1;
+            }else if(num1 > num && num > num2){
+                h = m -1;
+            }else if(num1 < num && num > num2){
+                break;
+            }
+        }
+
+        // find left side
+        l = 0;
+        h = m;
+        while(l <= h){
+            m = l + (h - l)/2;
+            int num = get(mountainArr, m);
+            if(num < target){
+                l = m + 1;
+            }else if(num > target){
+                h = m -1;
+            }else{
+                return m;
+            }
+        }
+
+        // find right side
+        l = m+1; 
+        h = length(mountainArr)-1;
+        while(l <= h){
+            m = l + (h - l)/2;
+            int num = get(mountainArr, m);
+            if(num < target){
+                h = m - 1;
+            }else if(num > target){
+                l = m + 1;
+            }else{
+                return m;
+            }
+        }
+        
+        return -1;
+}
 ```
