--- a/algorithm/LeetCode/[Easy] 1200. Minimum Absolute Difference.md
+++ b/algorithm/LeetCode/[Easy] 1200. Minimum Absolute Difference.md
@@ -61,3 +61,49 @@ class Solution:
 
         return values
 ```
+
+**Solution 2: (qsort)**
+```
+Runtime: 88 ms
+Memory Usage: 16.5 MB
+```
+```c
+int comparator(const void *p, const void *q){
+    return *(const int *)p - *(const int *)q;
+}
+
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int** minimumAbsDifference(int* arr, int arrSize, int* returnSize, int** returnColumnSizes){
+    qsort(arr, arrSize, sizeof(int), comparator);
+    int min = arr[1] - arr[0];
+    int count = 1;
+    for(int i=2; i<arrSize; i++){
+        if(min < arr[i] - arr[i-1]) continue;
+        else if(min == arr[i] - arr[i-1]) count++;
+        else{
+            min = arr[i] - arr[i-1];
+            count = 1;
+        }
+    }
+    *returnSize = count;
+    *returnColumnSizes = malloc(*returnSize * sizeof(int));
+    int** ans = malloc(*returnSize * sizeof(int*));
+    for(int i=0; i<*returnSize; i++){
+        (*returnColumnSizes)[i] = 2;
+        ans[i] = malloc(2 * sizeof(int));
+    }
+    int index = 0;
+    for(int i=1; i<arrSize; i++){
+        if(min == arr[i] - arr[i-1]){
+            ans[index][0] = arr[i-1];
+            ans[index][1] = arr[i];
+            index++;
+        }
+    }
+    return ans;
+}
+```
