update LeetCode solution - C (Google Top Questions)

--- a/algorithm/LeetCode/[Easy] 1009. Complement of Base 10 Integer.md
+++ b/algorithm/LeetCode/[Easy] 1009. Complement of Base 10 Integer.md
@@ -63,3 +63,23 @@ class Solution:
     def bitwiseComplement(self, N: int) -> int:
         return 2 ** (len(bin(N))-2)-1 - N
 ```
+
+**Solution 3: (Math)**
+```
+Runtime: 0 ms
+Memory Usage: 5.4 MB
+```
+```c
+
+
+int bitwiseComplement(int n){
+    if (n == 0) return 1;
+    int c = 0, m = n;
+    while (m) {
+        c <<= 1;
+        c += 1;
+        m >>= 1;
+    }
+    return n^c;
+}
+```
