--- a/algorithm/LeetCode/[Easy] 1010. Pairs of Songs With Total Durations Divisible by 60.md
+++ b/algorithm/LeetCode/[Easy] 1010. Pairs of Songs With Total Durations Divisible by 60.md
@@ -67,3 +67,21 @@ class Solution:
                     ans += c[k] * c[60-k]
         return ans     
 ```
+
+**Solution 2: (Greedy, Hash Table)**
+```
+Runtime: 24 ms
+Memory Usage: 8.2 MB
+```
+```c
+
+
+int numPairsDivisibleBy60(int* time, int timeSize){
+    int d[60] = {0}, ans = 0;
+    for (int i = 0; i < timeSize; i ++) {
+        ans += d[(60 - time[i]%60)%60];
+        d[time[i]%60] += 1;
+    }
+    return ans;
+}
+```
