--- a/algorithm/LeetCode/[Easy] 1022. Sum of Root To Leaf Binary Numbers.md
+++ b/algorithm/LeetCode/[Easy] 1022. Sum of Root To Leaf Binary Numbers.md
@@ -177,3 +177,35 @@ class Solution:
 
         return sum(dfs(root, 0))
 ```
+
+**Solution 5: (DFS)**
+```
+Runtime: 0 ms
+Memory Usage: 6.8 MB
+```
+```c
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     struct TreeNode *left;
+ *     struct TreeNode *right;
+ * };
+ */
+int dfs(struct TreeNode* root, int path) {
+    if (root == NULL)
+        return 0;
+    
+    path = (path << 1) + root->val;
+    
+    if (root->left == NULL && root->right == NULL) 
+        return path;
+    
+    return dfs(root->left,  path) + 
+           dfs(root->right, path);
+}
+
+int sumRootToLeaf(struct TreeNode* root){
+    return dfs(root, 0);
+}
+```
