update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Easy] 1672. Richest Customer Wealth.md
+++ b/algorithm/LeetCode/[Easy] 1672. Richest Customer Wealth.md
@@ -52,3 +52,34 @@ class Solution:
     def maximumWealth(self, accounts: List[List[int]]) -> int:
         return max(map(sum, accounts))
 ```
+
+**Solution 2: (Array)**
+```
+Runtime: 11 ms
+Memory Usage: 7.8 MB
+```
+```c++
+class Solution {
+public:
+    int maximumWealth(vector<vector<int>>& accounts) {
+        // Initialize the maximum wealth seen so far to 0 (the minimum wealth possible)
+        int maxWealthSoFar = 0;
+        
+        // Iterate over accounts
+        for (vector<int>& account : accounts) {
+            // For each account, initialize the sum to 0
+            int currCustomerWealth = 0;
+            // Add the money in each bank
+            for (int money : account) {
+                currCustomerWealth += money;
+            }
+            // Update the maximum wealth seen so far if the current wealth is greater
+            // If it is less than the current sum
+            maxWealthSoFar = max(maxWealthSoFar, currCustomerWealth);
+        }
+        
+        // Return the maximum wealth
+        return maxWealthSoFar;
+    }
+};
+```
