--- a/algorithm/LeetCode/[Hard] 1359. Count All Valid Pickup and Delivery Options.md
+++ b/algorithm/LeetCode/[Hard] 1359. Count All Valid Pickup and Delivery Options.md
@@ -32,6 +32,155 @@ Output: 90
 
 # Submissions
 ---
+**Solution: (Recursion with Memoization (Top-Down DP))**
+```
+Runtime: 97 ms
+Memory Usage: 19.7 MB
+```
+```c++
+class Solution {
+private:
+    int MOD = 1e9 + 7;
+    vector<vector<int>> memo;
+    
+    long totalWays(int unpicked, int undelivered) {
+        if (unpicked == 0 && undelivered == 0) {
+            // We have completed all orders.
+            return 1;
+        }
+        
+        if (unpicked < 0 || undelivered < 0 || undelivered < unpicked) {
+            // We can't pick or deliver more than N items
+            // Number of deliveries can't exceed number of pickups 
+            // as we can only deliver after a pickup.
+            return 0;
+        }
+        
+        if (memo[unpicked][undelivered]) {
+            // Return cached value, if already present. 
+            return memo[unpicked][undelivered];
+        }
+        
+        long ans = 0;
+        
+        // Count all choices of picking up an order.
+        ans += unpicked * totalWays(unpicked - 1, undelivered);
+        // Handle integer overflow.
+        ans %= MOD;
+        
+        // Count all choices of delivering a picked order.
+        ans += (undelivered - unpicked) * totalWays(unpicked, undelivered - 1);
+        // Handle integer overflow.
+        ans %= MOD;
+        
+        return memo[unpicked][undelivered] = ans;
+    }
+    
+public:
+    int countOrders(int n) {
+        memo = vector<vector<int>> (n + 1, vector<int>(n + 1, 0));
+        return totalWays(n, n);
+    }
+};
+```
+
+**Solution: (Tabulation (Bottom-Up DP))**
+```
+Runtime: 112 ms
+Memory Usage: 30.6 MB
+```
+```c++
+class Solution {
+
+public:
+    int MOD = 1e9 + 7;
+    
+    int countOrders(int n) {
+        vector<vector<long>> dp (n + 1, vector<long>(n + 1, 0));
+
+        for (int unpicked = 0; unpicked <= n; unpicked++) {
+            for (int undelivered = unpicked; undelivered <= n; undelivered++) {
+                // If all orders are picked and delivered then,
+                // for remaining '0' orders we have only one way.
+                if (unpicked == 0 && undelivered == 0) {
+                    dp[unpicked][undelivered] = 1;
+                    continue;
+                }
+                
+                // There are some unpicked elements left. 
+                // We have choice to pick any one of those orders.
+                if (unpicked > 0) {
+                    dp[unpicked][undelivered] += unpicked * dp[unpicked - 1][undelivered];
+                }
+                dp[unpicked][undelivered] %= MOD;
+                
+                // Number of deliveries done is less than picked orders.
+                // We have choice to deliver any one of (undelivered - unpicked) orders. 
+                if (undelivered > unpicked) {
+                    dp[unpicked][undelivered] += (undelivered - unpicked) * dp[unpicked][undelivered - 1];
+                }
+                dp[unpicked][undelivered] %= MOD;
+            }
+        }
+        
+        return dp[n][n];
+    }
+};
+```
+
+**Solution: (Permutations (Math))**
+```
+Runtime: 5 ms
+Memory Usage: 6 MB
+```
+```c++
+class Solution {
+
+public:
+    int countOrders(int n) {
+        long ans = 1;
+        int MOD = 1e9 + 7;
+
+        for (int i = 1; i <= n; ++i) {
+            // Ways to arrange all pickups, 1*2*3*4*5*...*n
+            ans = ans * i;
+            // Ways to arrange all deliveries, 1*3*5*...*(2n-1)
+            ans = ans * (2 * i - 1);
+            ans %= MOD;
+        }
+        
+        return ans;
+    }
+};
+```
+
+**Solution: (Probability (Math))**
+```
+Runtime: 2 ms
+Memory Usage: 6 MB
+```
+```c++
+class Solution {
+
+public:
+    int countOrders(int n) {
+        long ans = 1;
+        int MOD = 1e9 + 7;
+        
+        for (int i = 1; i <= 2 * n; ++i) {
+            ans = ans * i;
+            
+            // We only need to divide the result by 2 n-times.
+            // To prevent decimal results we divide after multiplying an even number.
+            if (i % 2 == 0) {
+                ans = ans / 2;
+            }
+            ans %= MOD;
+        }
+        return ans;
+    }
+};
+```
 
 **Intuition 1**
 
