update LeetCode solution - Hash Table

--- a/algorithm/LeetCode/[Easy] 1010. Pairs of Songs With Total Durations Divisible by 60.md
+++ b/algorithm/LeetCode/[Easy] 1010. Pairs of Songs With Total Durations Divisible by 60.md
@@ -85,3 +85,23 @@ int numPairsDivisibleBy60(int* time, int timeSize){
     return ans;
 }
 ```
+
+**Solution 3: (Greedy, Hash Table)**
+```
+Runtime: 40 ms
+Memory Usage: 28.3 MB
+```
+```c++
+class Solution {
+public:
+    int numPairsDivisibleBy60(vector<int>& time) {
+        unordered_map<int, int> cnt;
+        int ans = 0;
+        for (auto t: time) {
+            ans += cnt[(60-t%60)%60];
+            cnt[t%60] += 1;
+        }
+        return ans;
+    }
+};
+```
