update LeetCode solution - String

--- a/algorithm/LeetCode/[Easy] 1337. The K Weakest Rows in a Matrix.md
+++ b/algorithm/LeetCode/[Easy] 1337. The K Weakest Rows in a Matrix.md
@@ -75,3 +75,32 @@ class Solution:
     def kWeakestRows(self, mat: List[List[int]], k: int) -> List[int]:
         return list(zip(*sorted((sum(row), i) for i, row in enumerate(mat))[:k]))[1]
 ```
+
+**Solution 3: (Array)**
+```
+Runtime: 12 ms
+Memory Usage: 10.5 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> kWeakestRows(vector<vector<int>>& mat, int k) {
+        int R = mat.size(), C = mat[0].size();
+        vector<pair<int,int>> ones(R);
+        for (int i = 0; i < R; i ++) {
+            ones[i] = {0, i};
+            for (int j = 0; j < C; j ++) {
+                if (mat[i][j])
+                    ones[i].first += 1;
+                else
+                    break;
+            }
+        }
+        sort(ones.begin(), ones.end());
+        vector<int> ans(k);
+        for (int i = 0; i < k; i ++)
+            ans[i] = ones[i].second;
+        return ans;
+    }
+};
+```
