update LeetCode Weekly Contest 288

--- a/algorithm/LeetCode/[Easy] 1046. Last Stone Weight.md
+++ b/algorithm/LeetCode/[Easy] 1046. Last Stone Weight.md
@@ -51,3 +51,28 @@ class Solution:
                 
         return -pq[0] if pq else 0
 ```
+
+**Solution 2: (Heap)**
+```
+Runtime: 3 ms
+Memory Usage: 7.7 MB
+```
+```c++
+class Solution {
+public:
+    int lastStoneWeight(vector<int>& stones) {
+        priority_queue<int> pq;
+        for (auto stone: stones)
+            pq.push(stone);
+        while (pq.size() > 1) {
+            int a = pq.top(); pq.pop();
+            int b = pq.top(); pq.pop();
+            if (a != b)
+                pq.push(abs(a-b));
+        }
+        if (!pq.empty())
+            return pq.top();
+        return 0;
+    }
+};
+```
