update LeetCode Biweekly Contest 76

--- a/algorithm/LeetCode/[Easy] 1260. Shift 2D Grid.md
+++ b/algorithm/LeetCode/[Easy] 1260. Shift 2D Grid.md
@@ -113,3 +113,31 @@ int** shiftGrid(int** grid, int gridSize, int* gridColSize, int k, int* returnSi
     return ans;
 }
 ```
+
+**Solution 3: (Array)**
+```
+Runtime: 38 ms
+Memory Usage: 14.1 MB
+```
+```c++
+class Solution {
+public:
+    vector<vector<int>> shiftGrid(vector<vector<int>>& grid, int k) {
+        int m = grid.size();
+        int n = grid[0].size();
+        vector<vector<int>> ans(m,vector<int>(n));
+        
+        for(int i=0;i<m;i++){
+            for(int j=0;j<n;j++){
+                
+                int newJ=(j+k)%n; // (j + numbers of columns added)%m
+                
+                int newI=(i+(j+k)/n)%m; // (i + numbers of rows added)%n 
+                
+                ans[newI][newJ]=grid[i][j];
+            }
+        }
+        return ans;
+    }
+};
+```
