update LeetCode solution

--- a/algorithm/LeetCode/[Easy] 1342. Number of Steps to Reduce a Number to Zero.md
+++ b/algorithm/LeetCode/[Easy] 1342. Number of Steps to Reduce a Number to Zero.md
@@ -58,3 +58,22 @@ class Solution:
                 
         return ans
 ```
+
+**Solution 2: (Simulation)**
+```
+Runtime: 0 ms
+Memory Usage: 6 MB
+```
+```c++
+class Solution {
+public:
+    int numberOfSteps(int num) {
+        int ans = 0;
+        while (num != 0) {
+            num = num%2 ? num-1: num>>1;
+            ans += 1;
+        }
+        return ans;
+    }
+};
+```
