update LeetCode Weekly Contest 296

--- a/algorithm/LeetCode/[Easy] 1480. Running Sum of 1d Array.md
+++ b/algorithm/LeetCode/[Easy] 1480. Running Sum of 1d Array.md
@@ -43,3 +43,33 @@ class Solution:
     def runningSum(self, nums: List[int]) -> List[int]:
         return itertools.accumulate(nums)
 ```
+
+**Solution 2: (DP Bottom-Up)**
+```
+Runtime: 3 ms
+Memory Usage: 8.6 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> runningSum(vector<int>& nums) {
+        for(int i=1;i<nums.size();i++) nums[i]+=nums[i-1]; //prefix sum calculation
+        return nums;
+    }
+};
+```
+
+**Solution 3: (Partial_Sum)**
+```
+Runtime: 3 ms
+Memory Usage: 8.6 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> runningSum(vector<int>& nums) {
+        partial_sum(begin(nums), end(nums), begin(nums));
+        return nums;
+    }
+};
+```
