update LeetCode solution

--- a/algorithm/LeetCode/[Easy] 1332. Remove Palindromic Subsequences.md
+++ b/algorithm/LeetCode/[Easy] 1332. Remove Palindromic Subsequences.md
@@ -82,3 +82,25 @@ class Solution:
     def removePalindromeSub(self, s: str) -> int:
         return 2 - (s == s[::-1]) - (s == "")
 ```
+
+**Solution 2: (Math)**
+```
+Runtime: 7 ms
+Memory Usage: 6.2 MB
+```
+```c++
+class Solution {
+public:
+    int removePalindromeSub(string s) {
+        int i=0, j=s.size()-1;
+        while(i<j) {
+			//If string is not palindrome return 2
+            if(s[i]!=s[j]) return 2;
+            i++;
+            j--;
+        }
+        
+        return 1;
+    }
+};
+```
