update LeetCode Biweekly Contest 82

--- a/algorithm/LeetCode/[Hard] 1473. Paint House III.md
+++ b/algorithm/LeetCode/[Hard] 1473. Paint House III.md
@@ -131,3 +131,202 @@ class Solution:
         
         return res if res < float('inf') else -1
 ```
+
+**Solution 4: (Top-Down Dynamic Programming)**
+```
+Runtime: 121 ms
+Memory Usage: 10.8 MB
+```
+```c++
+class Solution {
+    // Assign the size as per maximum value for different params
+    int memo[100][100][21];
+    // Maximum cost possible plus 1
+    const int MAX_COST = 1000001;
+    
+    int findMinCost(vector<int>& houses, vector<vector<int>>& cost, int targetCount, int currIndex,
+                    int neighborhoodCount, int prevHouseColor) {
+        if (currIndex == houses.size()) {
+            // If all houses are traversed, check if the neighbor count is as expected or not
+            return neighborhoodCount == targetCount ? 0 : MAX_COST;
+        }
+        
+        if (neighborhoodCount > targetCount) {
+            // If the neighborhoods are more than the threshold, we can't have target neighborhoods
+            return MAX_COST;
+        }
+        
+        // We have already calculated the answer so no need to go into recursion
+        if (memo[currIndex][neighborhoodCount][prevHouseColor] != -1) {
+            return memo[currIndex][neighborhoodCount][prevHouseColor];
+        }
+        
+        int minCost = MAX_COST;
+        // If the house is already painted, update the values accordingly
+        if (houses[currIndex]) {
+            int newNeighborhoodCount = neighborhoodCount + (houses[currIndex] != prevHouseColor);
+            minCost = 
+                findMinCost(houses, cost, targetCount, currIndex + 1, newNeighborhoodCount, houses[currIndex]);
+        } else {
+            int totalColors = cost[0].size();
+            
+            // If the house is not painted, try every possible color and store the minimum cost
+            for (int color = 1; color <= totalColors; color++) {
+                int newNeighborhoodCount = neighborhoodCount + (color != prevHouseColor);
+                int currCost = cost[currIndex][color - 1]
+                    + findMinCost(houses, cost, targetCount, currIndex + 1, newNeighborhoodCount, color);
+                minCost = min(minCost, currCost);
+            }
+        }
+        
+        // Return the minimum cost and also storing it for future reference (memoization)
+        return memo[currIndex][neighborhoodCount][prevHouseColor] = minCost;
+    }
+public:
+    int minCost(vector<int>& houses, vector<vector<int>>& cost, int m, int n, int target) {
+        // Marking all values to -1 to denote that we don't have the answer ready for these params yet
+        memset(memo, -1, sizeof(memo));
+        int answer = findMinCost(houses, cost, target, 0, 0, 0);
+        
+        // Return -1 if the answer is MAX_COST as it implies no answer possible
+        return answer == MAX_COST ? -1 : answer;
+    }
+};
+```
+
+**Solution 5: (Bottom-Up Dynamic Programming)**
+```
+Runtime: 121 ms
+Memory Usage: 18.7 MB
+```
+```c++
+class Solution {
+    // Maximum cost possible plus 1
+    const int MAX_COST = 1000001;
+public:
+    int minCost(vector<int>& houses, vector<vector<int>>& cost, int m, int n, int target) {
+        // Initialize memo array
+        vector<vector<vector<int>>> memo(m, vector<vector<int>>(target + 1, vector<int>(n, MAX_COST)));
+            
+        // Initialize for house 0, neighborhoods will be 1
+        for (int color = 1; color <= n; color++) {
+            if (houses[0] == color) {
+                // If the house has same color, no cost
+                memo[0][1][color - 1] = 0;
+            } else if (!houses[0]) {
+                // If the house is not painted, assign the corresponding cost
+                memo[0][1][color - 1] = cost[0][color - 1];
+            }
+        }
+        
+        for (int house = 1; house < m; house++) {
+            for (int neighborhoods = 1; neighborhoods <= min(target, house + 1); neighborhoods++) {
+                for (int color = 1; color <= n; color++) {
+                    // If the house is already painted, and color is different
+                    if (houses[house] && color != houses[house]) {
+                        // Cannot be painted with different color
+                        continue;
+                    }
+ 
+                    int currCost = MAX_COST;
+                    // Iterate over all the possible color for previous house
+                    for (int prevColor = 1; prevColor <= n; prevColor++) {
+                        if (prevColor != color) {
+                            // Decrement the neighborhood as adjacent houses has different color
+                            currCost = min(currCost, memo[house - 1][neighborhoods - 1][prevColor - 1]);
+                        } else {
+                            // Previous house has the same color, no change in neighborhood count
+                            currCost = min(currCost, memo[house - 1][neighborhoods][color - 1]);
+                        }
+                    }
+
+                    // If the house is already painted cost to paint is 0
+                    int costToPaint = houses[house] ? 0 : cost[house][color - 1];
+                    memo[house][neighborhoods][color - 1] = currCost + costToPaint;
+                }
+            }
+        }
+        
+        int minCost = MAX_COST;
+        // Find the minimum cost with m houses and target neighborhoods
+        // By comparing cost for different color for the last house
+        for (int color = 1; color <= n; color++) {
+            minCost = min(minCost, memo[m - 1][target][color - 1]);
+        }
+        
+        // Return -1 if the answer is MAX_COST as it implies no answer possible
+        return minCost == MAX_COST ? -1 : minCost;
+    }
+};
+```
+
+**Solution 6: (Bottom-Up Dynamic Programming (Space Optimized))**
+```
+Runtime: 116 ms
+Memory Usage: 18.8 MB
+```
+```c++
+class Solution {
+    // Maximum cost possible plus 1
+    const int MAX_COST = 1000001;
+public:
+    int minCost(vector<int>& houses, vector<vector<int>>& cost, int m, int n, int target) {
+        // Initialize prevMemo array
+        vector<vector<int>> prevMemo(target + 1, vector<int>(n, MAX_COST));
+       
+        // Initialize for house 0, neighborhood will be 1
+        for (int color = 1; color <= n; color++) {
+            if (houses[0] == color) {
+                // If the house has same color, no cost
+                prevMemo[1][color - 1] = 0;
+            } else if (!houses[0]) {
+                // If the house is not painted, assign the corresponding cost
+                prevMemo[1][color - 1] = cost[0][color - 1];
+            }
+        }
+        
+        for (int house = 1; house < m; house++) {
+            // Initialize memo array
+            vector<vector<int>> memo(target + 1, vector<int>(n, MAX_COST));
+            
+            for (int neighborhoods = 1; neighborhoods <= min(target, house + 1); neighborhoods++) {
+                for (int color = 1; color <= n; color++) {
+                    // If the house is already painted, and color is different
+                    if (houses[house] && color != houses[house]) {
+                        // Cannot be painted with different color
+                        continue;
+                    }
+ 
+                    int currCost = MAX_COST;
+                    // Iterate over all the possible color for previous house
+                    for (int prevColor = 1; prevColor <= n; prevColor++) {
+                        if (prevColor != color) {
+                            // Decrement the neighborhood as adjacent houses has different color
+                            currCost = min(currCost, prevMemo[neighborhoods - 1][prevColor - 1]);
+                        } else {
+                            // Previous house has the same color, no change in neighborhood count
+                            currCost = min(currCost, prevMemo[neighborhoods][color - 1]);
+                        }
+                    }
+
+                    // If the house is already painted cost to paint is 0
+                    int costToPaint = houses[house] ? 0 : cost[house][color - 1];
+                    memo[neighborhoods][color - 1] = currCost + costToPaint;
+                }
+            }
+            // Update the table to have the current house results
+            prevMemo = memo;
+        }
+        
+        int minCost = MAX_COST;
+        // Find the minimum cost with m houses and target neighborhoods
+        // By comparing cost for different color for the last house
+        for (int color = 1; color <= n; color++) {
+            minCost = min(minCost, prevMemo[target][color - 1]);
+        }
+        
+        // Return -1 if the answer is MAX_COST as it implies no answer possible
+        return minCost == MAX_COST ? -1 : minCost;
+    }
+};
+```
