update LeetCode Weekly Contest 316

--- a/algorithm/LeetCode/[Easy] 1832. Check if the Sentence Is Pangram.md
+++ b/algorithm/LeetCode/[Easy] 1832. Check if the Sentence Is Pangram.md
@@ -54,3 +54,18 @@ public:
     }
 };
 ```
+
+**Solution 3: (Set)**
+```
+Runtime: 3 ms
+Memory: 7.3 MB
+```
+```c++
+class Solution {
+public:
+    bool checkIfPangram(string sentence) {
+        unordered_set<char> s(sentence.begin(), sentence.end());
+        return s.size() == 26;
+    }
+};
+```
