update LeetCode Biweekly Contest 90

--- a/algorithm/LeetCode/[Easy] 1662. Check If Two String Arrays are Equivalent.md
+++ b/algorithm/LeetCode/[Easy] 1662. Check If Two String Arrays are Equivalent.md
@@ -47,3 +47,18 @@ class Solution:
     def arrayStringsAreEqual(self, word1: List[str], word2: List[str]) -> bool:
         return ''.join(word1) == ''.join(word2)
 ```
+
+**Solution 2: (string)**
+```
+Runtime: 3 ms
+Memory: 12.3 MB
+```
+```c++
+class Solution {
+public:
+    bool arrayStringsAreEqual(vector<string>& word1, vector<string>& word2) {
+        // C++ 17 has std::reduce
+        return reduce(word1.cbegin(), word1.cend()) == reduce(word2.cbegin(), word2.cend());
+    }
+};
+```
