--- a/algorithm/LeetCode/[Hard] 1293. Shortest Path in a Grid with Obstacles Elimination.md
+++ b/algorithm/LeetCode/[Hard] 1293. Shortest Path in a Grid with Obstacles Elimination.md
@@ -46,7 +46,7 @@ We need to eliminate at least two obstacles to find such a walk.
 
 # Submissions
 ---
-**Solution 1: (BFS)**
+**Solution 1: (BFS, level-order)**
 
 On top of BFS, I used an auxiliary dictionary "visited" to keep track of min eliminations used to get to each node, also to avoid repetition.
 
@@ -78,4 +78,51 @@ class Solution:
             steps += 1
         
         return -1
+```
+
+**Solution 1: (BFS)**
+```
+Runtime: 106 ms
+Memory: 19.1 MB
+```
+```c++
+class Solution {
+public:
+    int shortestPath(vector<vector<int>>& grid, int k) {
+        int m = grid.size(), n = grid[0].size();
+        if(m == 1 && n == 1)
+            return 0;
+        vector<vector<int>> vis(m, vector<int> (n, -1));
+        vector<pair<int, int>> dir = {{1, 0}, {0, 1}, {-1, 0}, {0, -1}};
+        auto check = [&](int x, int y) {
+            return x > -1 && x < m && y > -1 && y < n;
+        };
+        queue<vector<int>> q;
+        q.push({0, 0, 0, k});
+        vis[0][0] = k;
+        while(!q.empty()) {
+            auto t = q.front();
+            q.pop();
+            int row = t[0], col = t[1], step = t[2], obstacle = t[3];
+            if(row == m - 1 && col == n - 1) // Reached destination
+                return step;
+            if(grid[row][col] == 1) {
+                if(!obstacle)
+                    continue;
+                obstacle--;
+            }
+            // Checking adjacent cells
+            for(auto [dx, dy]: dir) {
+                int nx = row + dx;
+                int ny = col + dy;
+                if(check(nx, ny) && (vis[nx][ny] < obstacle)) {
+                    vis[nx][ny] = obstacle;
+                    q.push({nx, ny, step + 1, obstacle});
+                }
+            }
+        }
+
+        return -1;
+    }
+};
 ```
