--- a/algorithm/LeetCode/[Easy] 1323. Maximum 69 Number.md
+++ b/algorithm/LeetCode/[Easy] 1323. Maximum 69 Number.md
@@ -39,7 +39,7 @@ Explanation: It is better not to apply any change.
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (string)**
 ```
 Runtime: 28 ms
 Memory Usage: 12.7 MB
@@ -48,4 +48,60 @@ Memory Usage: 12.7 MB
 class Solution:
     def maximum69Number (self, num: int) -> int:
         return int(str(num).replace('6', '9', 1))
+```
+
+**Solution 2: (Check the remainder)**
+```
+Runtime: 25 ms
+Memory: 13.8 MB
+```
+```python
+Accepted
+Jan 19, 2020
+Python3
+Accepted
+Jan 19, 2020
+Python3
+Close
+FC Su
+FC Su
+Nov 07, 2022 21:15
+
+Details
+Solution
+Python3
+Runtime
+25 ms
+Beats
+98.67%
+Memory
+13.8 MB
+Beats
+95.47%
+Click to check the distribution chart
+Notes
+Write your notes here
+Related Tags
+Select tags
+0/5
+class Solution:
+    def maximum69Number (self, num: int) -> int:
+        # Since we start with the lowest digit, initialize curr_digit = 0.
+        curr_digit = 0
+        index_first_six = -1
+        num_copy = num
+        
+        # Check every digit of 'num_copy' from low to high.
+        while num_copy:
+            # If the current digit is '6', record it as the highest digit of 6.
+            if num_copy % 10 == 6:
+                index_first_six = curr_digit
+            
+            # Move on to the next digit.
+            num_copy //= 10
+            curr_digit += 1
+        
+        # If we don't find any digit of '6', return the original number,
+        # otherwise, increment 'num' by the difference made by the first '6'.
+        return num if index_first_six == -1 else num + 3 * 10 ** index_first_six
 ```
