update LeetCode Weekly Contest 322

--- a/algorithm/LeetCode/[Easy] 1207. Unique Number of Occurrences.md
+++ b/algorithm/LeetCode/[Easy] 1207. Unique Number of Occurrences.md
@@ -32,12 +32,11 @@ Output: true
 ---
 **Solution**
 ```
-Runtime: 24 ms
-Memory Usage: 12.8 MB
+Runtime: 82 ms
+Memory: 14 MB
 ```
 ```python
 class Solution:
     def uniqueOccurrences(self, arr: List[int]) -> bool:
-        c = collections.Counter(arr)
-        return len(collections.Counter(c.values()).values()) == len(c.values())
+        return len(c := Counter(arr)) == len(set(c.values()))
 ```
